objects/LLC_BI__Treasury_Service__c.object
<CustomObject>
    <fields>
        <fullName>CF_Last_Treasury_Review_Date__c</fullName>
        <description>Used in Treasury Service List View</description>
        <formula>LLC_BI__Relationship__r.CF_Last_Treasury_Review_Date__c</formula>
        <label>Last Treasury Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_MSA_Version__c</fullName>
        <label>MSA Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Old</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Name_of_Merchant_Processor__c</fullName>
        <description>This field is used under Setup Information for Payment Portal products and required to be filled if the field &apos;Does Customer have CC Processing?&apos; is Yes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Merchant Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Next_Treasury_Review_Date__c</fullName>
        <description>This field represents the next treasury review date for the account</description>
        <formula>LLC_BI__Relationship__r.CF_Next_Treasury_Review_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Treasury Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_No_Financial_Info_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on ACH Credit, ACH Debit and Third Party Sender Products</description>
        <label>No Financial Info Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Onboarding_Stage_Duration__c</fullName>
        <description>This field is used to determine Onboarding Stage Duration</description>
        <formula>CF_Date_DocuSign_Returned__c - CF_Date_Order_Entry_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onboarding Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Open_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Date - NOT IN USE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the Opportunity record.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Order_Entry_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used to capture the user info by whom Order Entry is Completed.
Used in Management Solution Products &gt; Install Details sub-route.</description>
        <label>Order Entry Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Order_Entry_Duration__c</fullName>
        <description>This field is used to determine Order Entry duration.</description>
        <formula>CF_Date_Order_Entry_Completed__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Entry Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Order_Review_Duration__c</fullName>
        <description>This field is used to determine Order Review Duration.</description>
        <formula>CF_Date_Submitted_for_Approval__c -  CF_Date_Order_Entry_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Review Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Other_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Other_Error_Count__c</fullName>
        <description>used to store count of &apos;Other&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Other&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Other&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Other&apos;)), 3,

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Other&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Other&apos;)), 
AND(ISPICKVAL(CF_Error_2_Found__c, &apos;Other&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;Other&apos;)), 
AND(ISPICKVAL(CF_Error_3_Found__c, &apos;Other&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;Other&apos;))),2 ,

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;Other&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Other&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Other&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Products__c</fullName>
        <description>This picklist field will be used to conditionally render Error 1, Error 2 and Error 3 for QC on Treasury Service route</description>
        <label>Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A/A-Other</fullName>
                </value>
                <value>
                    <fullName>ACH Credit Origination</fullName>
                </value>
                <value>
                    <fullName>ACH Debit Origination</fullName>
                </value>
                <value>
                    <fullName>ACH Positive Pay</fullName>
                </value>
                <value>
                    <fullName>BAI File Download</fullName>
                </value>
                <value>
                    <fullName>Check Positive Pay</fullName>
                </value>
                <value>
                    <fullName>Commercial Loan Sweep</fullName>
                </value>
                <value>
                    <fullName>EDI Addenda Translation</fullName>
                </value>
                <value>
                    <fullName>High Speed RDC</fullName>
                </value>
                <value>
                    <fullName>I-Collect Portal</fullName>
                </value>
                <value>
                    <fullName>Low Speed RDC</fullName>
                </value>
                <value>
                    <fullName>Mobile RDC</fullName>
                </value>
                <value>
                    <fullName>Money Market Sweep</fullName>
                </value>
                <value>
                    <fullName>Multi User</fullName>
                </value>
                <value>
                    <fullName>Remote Lockbox</fullName>
                </value>
                <value>
                    <fullName>Retail Lockbox</fullName>
                </value>
                <value>
                    <fullName>SFTP File Transfer</fullName>
                </value>
                <value>
                    <fullName>Target Balance Sweep</fullName>
                </value>
                <value>
                    <fullName>Third Party Sender</fullName>
                </value>
                <value>
                    <fullName>U-Pay Portal</fullName>
                </value>
                <value>
                    <fullName>Wire Transmission</fullName>
                </value>
                <value>
                    <fullName>Zero Balance Sweep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Profit_Stars_Error_Count__c</fullName>
        <description>used to store count of &apos;Profit Stars&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Profit Stars&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Profit Stars&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Profit Stars&apos;)), 3,

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Profit Stars&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Profit Stars&apos;)), AND(ISPICKVAL(CF_Error_2_Found__c, &apos;Profit Stars&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;Profit Stars&apos;)), 
AND(ISPICKVAL(CF_Error_3_Found__c, &apos;Profit Stars&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;Profit Stars&apos;))),2 ,

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;Profit Stars&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Profit Stars&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Profit Stars&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Stars Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_QC_Review_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QC Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_QC_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QC Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Quality_Control_Duration__c</fullName>
        <description>This field is used to determine Quality Control Duration.</description>
        <formula>CF_Date_Quality_Control_Completed__c -  CF_Date_Post_Close_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Control Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_RDC_Indemnification_Agreement__c</fullName>
        <label>RDC Indemnification Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Region__c</fullName>
        <description>Used in Treasury Service List View</description>
        <formula>TEXT(LLC_BI__Relationship__r.LLC_BI__Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the Relationship Manager. Used in Team Details Route under TS record.</description>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Request_Type__c</fullName>
        <description>Used to store Request Type information</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Requested_ACH_Limit__c</fullName>
        <description>This field has used in Payment Portal UI.</description>
        <label>Requested ACH Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_SFTP_Uses__c</fullName>
        <description>This field was used under Setup Information route for Management Solution products</description>
        <inlineHelpText>Required for SFTP</inlineHelpText>
        <label>SFTP Uses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Origination</fullName>
                </value>
                <value>
                    <fullName>ACH Returns</fullName>
                </value>
                <value>
                    <fullName>Positive Pay</fullName>
                </value>
                <value>
                    <fullName>BAI2</fullName>
                </value>
                <value>
                    <fullName>I-Collect</fullName>
                </value>
                <value>
                    <fullName>Remittance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Sales_Stage_Duration__c</fullName>
        <description>This field is used to determine Sales Stage Duration.</description>
        <formula>CF_Date_Order_Entry_Completed__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Silverlake_Setup_Error_Count__c</fullName>
        <description>used to store count of &apos;Silverlake Setup&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Silverlake Setup&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Silverlake Setup&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Silverlake Setup&apos;)), 3, 

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Silverlake Setup&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Silverlake Setup&apos;)), AND(ISPICKVAL(CF_Error_2_Found__c, &apos;Silverlake Setup&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;Silverlake Setup&apos;)), AND(ISPICKVAL(CF_Error_3_Found__c, &apos;Silverlake Setup&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;Silverlake Setup&apos;))),2 , 

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;Silverlake Setup&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Silverlake Setup&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Silverlake Setup&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Silverlake Setup Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Single_Transaction_Amount__c</fullName>
        <description>Used to capture Single Transaction Amount for RDC products.
Treasury Service Details Route &gt; Product Details Section</description>
        <label>Single Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Entry</fullName>
                    <default>true</default>
                    <label>Order Entry</label>
                </value>
                <value>
                    <fullName>Order Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Customer Signature</fullName>
                </value>
                <value>
                    <fullName>Awaiting Implementation / Confirm Install Date</fullName>
                </value>
                <value>
                    <fullName>Initial Setup</fullName>
                </value>
                <value>
                    <fullName>Implementation &amp; Post-Close Activities</fullName>
                </value>
                <value>
                    <fullName>Quality Control</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Confirm/Schedule Install Date</fullName>
                    <isActive>false</isActive>
                    <label>Confirm/Schedule Install Date</label>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                    <isActive>false</isActive>
                    <label>Doc Review</label>
                </value>
                <value>
                    <fullName>Finish Customer Setup &amp; Implementation</fullName>
                    <isActive>false</isActive>
                    <label>Finish Customer Setup &amp; Implementation</label>
                </value>
                <value>
                    <fullName>Post-Close Activities</fullName>
                    <isActive>false</isActive>
                    <label>Post-Close Activities</label>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                    <isActive>false</isActive>
                    <label>Underwriting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field auto-populates with the user who updated the Sub-Stage to Submitted for Approval.</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Services14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Suspend_Cancel_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Suspend/Cancel Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donations</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Lunch Payments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Alerts__c</fullName>
        <formula>TEXT(LLC_BI__Relationship__r.CF_Treasury_Alerts__c)</formula>
        <label>Treasury Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Risk_Rating__c</fullName>
        <description>Used in Treasury Service List View</description>
        <formula>LLC_BI__Relationship__r.CF_Treasury_Risk_Rating__c</formula>
        <label>Treasury Risk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Sales_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the Treasury Sales Officer. Used in Team Details Route under TS record.</description>
        <label>Treasury Sales Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Sales_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the Treasury Sales Specialist. Used in Team Details Route under TS record.</description>
        <label>Treasury Sales Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Support_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the Treasury Support Specialist. Used in Team Details Route under TS record.</description>
        <label>Treasury Support Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_iPay_Error_Count__c</fullName>
        <description>used to store count of &apos;iPay&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;iPay&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;iPay&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;iPay&apos;)), 3,

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;iPay&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;iPay&apos;)), 
AND(ISPICKVAL(CF_Error_2_Found__c, &apos;iPay&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;iPay&apos;)), 
AND(ISPICKVAL(CF_Error_3_Found__c, &apos;iPay&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;iPay&apos;))),2 ,

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;iPay&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;iPay&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;iPay&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iPay Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reference</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_a_New_Contact__c</fullName>
        <formula>HYPERLINK(
LEFT($Api.Partner_Server_URL_260, (FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)-1)) + &apos;/lightning/o/Contact/new?defaultFieldValues=AccountId=&apos;+ LLC_BI__Relationship__r.Id, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create a New Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__EmbosName__c</fullName>
        <description>test The system will populate this optional text field with Debit Card embossed name. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EmbosName</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__SecdEmbosName__c</fullName>
        <description>The system will populate this optional text field with Debit Card second embossed name. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SecdEmbosName</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_ID__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is automatically populated. This lookup field is used to specify the application record that is associated to the treasury service record.</description>
        <inlineHelpText>Use this lookup field to associate an application record to this treasury service record.</inlineHelpText>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Automated_Clearing_House_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Automated Clearing House Service</label>
        <referenceTo>LLC_BI__Automated_Clearing_House_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Card_Number__c</fullName>
        <description>This optional field is manually populated with the card number that has been assigned to the access or debit card referred to in the form. The number is collected when creating a debit card.</description>
        <label>Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Service</label>
        <referenceTo>LLC_BI__Cash_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Commercial_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Conversion_Object__c</fullName>
        <description>This field contains the object from which the Treasury Conversion was executed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field contains the Id of the object from which the treasury service was converted</inlineHelpText>
        <label>Conversion Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <description>This field determines the default page within the nCino User Interface for this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field determines the default page within the nCino User Interface for this record.</inlineHelpText>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depository_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depository Service</label>
        <referenceTo>LLC_BI__Depository_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disbursement_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disbursement Service</label>
        <referenceTo>LLC_BI__Disbursement_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>Earliest date for the setup of products .</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Earliest date for the setup of products .</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Billing_Month__c</fullName>
        <description>The first month that the customer should be billed for their Treasury Management Services.</description>
        <inlineHelpText>The first month that the customer should be billed for their Treasury Management Services.</inlineHelpText>
        <label>First Billing Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Implementation_Instructions__c</fullName>
        <description>Where sales can provide further instruction to the implementation team.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_ATM_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field is automatically populated by the system and is used as an indicator flag for document preparation.</description>
        <label>Is ATM Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Under_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this checkbox if a current treasury service record undergoes maintenance.</description>
        <inlineHelpText>Select this checkbox when a current treasury service is under maintenance.</inlineHelpText>
        <label>Is Under Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lockbox_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lockbox Service</label>
        <referenceTo>LLC_BI__Lockbox_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_App__c</fullName>
        <description>This field automatically populates via the treasury maintenance conversion. It associates converted treasury services to product-specific maintenance actions. This field corresponds to the unique app name on the route object to control what is displayed to users. Default is null.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance App</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Miscellaneous_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Service</label>
        <referenceTo>LLC_BI__Miscellaneous_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Online_Banking_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Banking Service</label>
        <referenceTo>LLC_BI__Online_Banking_Service__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>